--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-    "manifest_version": 2,
-  
+    "manifest_version": 3,
     "name": "Trophy Collector Plugin",
-    "version": "1.0",
+    "description": "Trophy downloader for Stuff Pages",
+    "version": "2.0",
     "background": {
-        "scripts": ["background.js"]
+        "service_worker": "background.js"
       },  
-    "browser_action": {
+    "action": {
      "default_icon": "icon.png"
     },
      "content_scripts": [
@@ -14,7 +14,7 @@
           "matches": [
             "<all_urls>"
           ],
-          "js": ["jquery-3.5.1.min.js","popup.js"]
+          "js": ["popup.js"]
         }
       ]
   }
